--- a/src/index.scss
+++ b/src/index.scss
@@ -44,7 +44,7 @@ body {
 	}
 
 	text {
-		font-family: 'Prompt', sans-serif, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+		font-family: "Prompt", sans-serif, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 		fill: white;
 		font-weight: 500;
 		letter-spacing: 0.3px;
